--- a/GolfSweden/Web.config
+++ b/GolfSweden/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-GolfSweden-20120916174632;Integrated Security=SSPI" />
+    <add name="GolfSwedenEntities" connectionString="metadata=res://*/Data.DatabaseModel.csdl|res://*/Data.DatabaseModel.ssdl|res://*/Data.DatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AX069;initial catalog=GolfSweden;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -20,7 +21,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
